--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node": ">=14.18.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=development vite build --watch",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'",
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14",
+    "tus-js-client": "^4.3.1",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "autoprefixer": "^10.4.20",
     "gulp": "^4.0.2",
     "gulp-zip": "^6.0.0",
+    "hot-reload-extension-vite": "^1.0.13",
     "postcss": "^8.5.1",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.17",
