--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "antd": "^5.23.3",
     "bn.js": "^5.2.1",
     "chrome-extension-message-wrapper": "^1.0.5",
+    "dotenv": "^16.4.7",
     "json-stringify-deterministic": "^1.0.12",
     "react": "^18.2.0",
     "react-codemirror-merge": "^4.23.7",
