update default vault

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 HOT_RELOAD_EXTENSION_VITE_PORT=8080
 TUSKY_API_KEY="4a5c829c-bcd9-40eb-8687-c56dcb9a76db"
 TUS_API="https://api.tusky.io"
+DEFAULT_VAULT="dfae36c8-dcbd-4e12-b13e-c7cb95be40ba"
