--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WeAI",
+  "name": "flyfish-extension",
   "displayName": "",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "no one",
   "description": "",
   "type": "module",
