--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chrome-extension-message-wrapper": "^1.0.5",
     "dotenv": "^16.4.7",
     "json-stringify-deterministic": "^1.0.12",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-codemirror-merge": "^4.23.7",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "@crxjs/vite-plugin": "^2.0.0-beta.19",
     "@types/bn.js": "^5.1.6",
     "@types/chrome": "^0.0.246",
+    "@types/lodash": "^4.17.15",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@types/webextension-polyfill": "^0.12.1",
