--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development vite build --watch",
+    "windev": "set NODE_ENV=development && vite build --watch",
     "build": "vite build",
     "preview": "vite preview",
     "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'",
@@ -52,7 +53,7 @@
     "gulp": "^4.0.2",
     "gulp-zip": "^6.0.0",
     "hot-reload-extension-vite": "^1.0.13",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
