--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-codemirror-merge": "^4.23.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.14",
     "tus-js-client": "^4.3.1",
     "webextension-polyfill": "^0.12.0"
