chore: update env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TUSKY_API_KEY=
-TUS_API=
-DEFAULT_VAULT=
-FLYFISH_API_URL=
+VITE_PINATA_JWT=
+VITE_PINATA_GATEWAY=
+VITE_PINATA_API_KEY=
+VITE_PINATA_SECRET_KEY=
