--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dotenv": "^16.4.7",
     "json-stringify-deterministic": "^1.0.12",
     "lodash": "^4.17.21",
-    "pinata-web3": "^0.5.4",
+    "pinata": "^2.0.1",
     "react": "^18.2.0",
     "react-codemirror-merge": "^4.23.7",
     "react-dom": "^18.2.0",
