--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.14",
     "tus-js-client": "^4.3.1",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.19",
