--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "chrome-extension-message-wrapper": "^1.0.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.4.10",
     "json-stringify-deterministic": "^1.0.12",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.479.0",
     "pinata": "^2.0.1",
+    "pinata-web3": "^0.5.4",
     "react": "^18.2.0",
     "react-codemirror-merge": "^4.23.7",
     "react-dom": "^18.2.0",
