--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.35.0",
     "@tanstack/react-query": "^5.66.0",
     "@uiw/codemirror-extensions-langs": "^4.23.7",
     "antd": "^5.23.3",
